modify sql
